Kleine Code-Verbesserungen und neues Top der Home-Seite

--- a/WebPlayer-war/web/mockup.html
+++ b/WebPlayer-war/web/mockup.html
@@ -54,7 +54,7 @@ and open the template in the editor.
     </head>
     <body>
         <h1> Du hast die Mockup-Seite für eine Nutzung unseres Services ohne Anmeldung/Registrierung erreicht! </h1><br>
-        <form action="/Webplayer-web/" method="get">
+        <form action="/WebPlayer-war/" method="get">
             <button class="bu"><span>zurück zur Login-Seite</span></button>
         </form>
     </body>
