--- a/WebPlayer-war/web/index.html
+++ b/WebPlayer-war/web/index.html
@@ -4,7 +4,8 @@
 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title> musicStream</title>
-
+        <link rel="icon" href="logo.png" type="image/x-icon">
+        
         <style>
             html{
                 font-family: cursive;
